# classifier

./: .gitignore  CMakeLists.txt  IMPROVEMENT_RECOMMENDATIONS.md  PIPE_CPP_REWRITE_GUIDE.md  README.md  build.sh  compile_commands.json  guide.md  kaggle_script.py
model_design/: export_opencv.py  model.py
src/: pipe.cpp  pipeline.cpp
